--- a/angular/src/app/pages/home/home.component.scss
+++ b/angular/src/app/pages/home/home.component.scss
@@ -7,7 +7,13 @@
     border: none;
   }
 
-  .buttonTags:hover {
+  .buttonTags:hover,
+  .buttonTags:active {
     background-color: green;
+  }
+
+  button.active {
+    background-color: red;
+    color: white;
   }
 }
