--- a/angular/src/app/shared-components/light-novel-form/light-novel-form.component.html
+++ b/angular/src/app/shared-components/light-novel-form/light-novel-form.component.html
@@ -141,7 +141,7 @@
             </div>
           </div>
 
-          <button (click)="addLightNovel()" class="btn btn-primary">
+          <button *ngIf="" (click)="addLightNovel()" class="btn btn-primary">
             Crea
           </button>
           <button (click)="cleanForum()" class="btn btn-primary">Svuota</button>
