--- a/angular/src/app/shared-components/light-novel-form/light-novel-form.component.html
+++ b/angular/src/app/shared-components/light-novel-form/light-novel-form.component.html
@@ -6,25 +6,47 @@
           <h1 class="h3 text-center mb-3 fw-normal">Crea la tua Light Novel</h1>
 
           <label for="title">Inserisci il titolo*</label>
-          <input type="text" formControlName="title" class="form-control" placeholder="Write your title..." name="title"
-            id="title" />
+          <input
+            type="text"
+            formControlName="title"
+            class="form-control"
+            placeholder="Write your title..."
+            name="title"
+            id="title"
+          />
           <p *ngIf="isTouchedInvalid('title')">
             Inserisci correttamente il titolo
           </p>
           <label for="plot">Inserisci una breve trama</label>
-          <textarea name="plot" formControlName="plot" class="form-control" id="plot"></textarea>
+          <textarea
+            name="plot"
+            formControlName="plot"
+            class="form-control"
+            id="plot"
+          ></textarea>
           <p *ngIf="isTouchedInvalid('plot')">
             Inserisci correttamente la trama
           </p>
           <label for="description">Inserisci una breve descrizione</label>
-          <textarea name="description" formControlName="description" class="form-control" id="description"></textarea>
+          <textarea
+            name="description"
+            formControlName="description"
+            class="form-control"
+            id="description"
+          ></textarea>
           <p *ngIf="isTouchedInvalid('description')">
             Inserisci correttamente la descrizione
           </p>
 
           <label for="author">Inserisci l'autore</label>
-          <input type="text" formControlName="author" class="form-control" placeholder="Write your author..."
-            name="author" id="author" />
+          <input
+            type="text"
+            formControlName="author"
+            class="form-control"
+            placeholder="Write your author..."
+            name="author"
+            id="author"
+          />
           <p *ngIf="isTouchedInvalid('author')">
             Inserisci correttamente il nome dell'autore
           </p>
@@ -37,112 +59,222 @@
           </div>
 
           <label for="file">Inserisce la copertina della Light-novel</label>
-          <input type="file" formControlName="image_url" class="form-control" id="file" />
+          <input
+            type="file"
+            formControlName="image_url"
+            class="form-control"
+            id="file"
+          />
 
-          <div formGroupName="story"> <!-- racconto storia iniziale-->
+          <div formGroupName="story">
+            <!-- racconto storia iniziale-->
             <label for="part1">Inserisci la prima sezione interattiva</label>
-            <input type="text" formControlName="part1" class="form-control"
-              placeholder="Write the section interactive..." id="part1" />
+            <input
+              type="text"
+              formControlName="part1"
+              class="form-control"
+              placeholder="Write the section interactive..."
+              id="part1"
+            />
 
             <p *ngIf="isTouchedInvalid('story.part1')">
               Inserisci correttamente la parte interattiva
             </p>
 
             <div formGroupName="firstChoice">
-              <label for="firstChoice1">Inserisci la seconda sezione (C1) interattiva</label> <!--scelta 1 prima parte-->
-              <input type="text" formControlName="choice1" class="form-control"
-                placeholder="Write the choice interactive..." id="firstChoice1" />
+              <label for="firstChoice1"
+                >Inserisci la seconda sezione (C1) interattiva</label
+              >
+              <!--scelta 1 prima parte-->
+              <input
+                type="text"
+                formControlName="choice1"
+                class="form-control"
+                placeholder="Write the choice interactive..."
+                id="firstChoice1"
+              />
               <p *ngIf="isTouchedInvalid('story.firstChoice.choice1')">
                 Inserisci correttamente la parte interattiva
               </p>
 
-              <label for="firstChoice2">Inserisci la seconda sezione (C2) interattiva</label> <!--scelta 2 prima parte-->
-              <input type="text" formControlName="choice2" class="form-control"
-                placeholder="Write the choice interactive..." id="firstChoice2" />
+              <label for="firstChoice2"
+                >Inserisci la seconda sezione (C2) interattiva</label
+              >
+              <!--scelta 2 prima parte-->
+              <input
+                type="text"
+                formControlName="choice2"
+                class="form-control"
+                placeholder="Write the choice interactive..."
+                id="firstChoice2"
+              />
               <p *ngIf="isTouchedInvalid('story.firstChoice.choice2')">
                 Inserisci correttamente la parte interattiva
               </p>
             </div>
 
             <div formGroupName="part2">
-
-              <label for="part2a">Inserisci la seconda sezione (2A) interattiva</label>  <!-- storia 2a-->
-              <input type="text" formControlName="part2a" class="form-control"
-                placeholder="Write the section interactive..." id="part2a" />
+              <label for="part2a"
+                >Inserisci la seconda sezione (2A) interattiva</label
+              >
+              <!-- storia 2a-->
+              <input
+                type="text"
+                formControlName="part2a"
+                class="form-control"
+                placeholder="Write the section interactive..."
+                id="part2a"
+              />
               <p *ngIf="isTouchedInvalid('story.part2.part2a')">
                 Inserisci correttamente la parte interattiva
               </p>
 
-              <label for="part2b">Inserisci la seconda sezione (2B) interattiva</label> <!-- storia 2b-->
-              <input type="text" formControlName="part2b" class="form-control"
-                placeholder="Write the section interactive..." id="part2b" />
+              <label for="part2b"
+                >Inserisci la seconda sezione (2B) interattiva</label
+              >
+              <!-- storia 2b-->
+              <input
+                type="text"
+                formControlName="part2b"
+                class="form-control"
+                placeholder="Write the section interactive..."
+                id="part2b"
+              />
               <p *ngIf="isTouchedInvalid('story.part2.part2b')">
                 Inserisci correttamente la parte interattiva
               </p>
             </div>
 
-            <div formGroupName="secondChoice"> <!-- scelste seconda parte-->
+            <div formGroupName="secondChoice">
+              <!-- scelste seconda parte-->
 
-              <label for="secondChoice1">Inserisci la seconda sezione (C2a) interattiva</label> <!--scelta 1 seconda parte-->
-              <input type="text" formControlName="secondChoice1" class="form-control"
-                placeholder="Write the choice interactive..." id="secondChoice1" />
+              <label for="secondChoice1"
+                >Inserisci la seconda sezione (C2a) interattiva</label
+              >
+              <!--scelta 1 seconda parte-->
+              <input
+                type="text"
+                formControlName="secondChoice1"
+                class="form-control"
+                placeholder="Write the choice interactive..."
+                id="secondChoice1"
+              />
               <!-- <p *ngIf="isTouchedInvalid('story.secondChoice.secondChoice1')">
                 Inserisci correttamente la parte interattiva
-              </p> -->
+              </p>
 
-              <label for="secondChoice2">Inserisci la seconda sezione (C2b) interattiva</label> <!--scelta 2 seconda parte-->
-              <input type="text" formControlName="secondChoice2" class="form-control"
-                placeholder="Write the choice interactive..." id="secondChoice2" />
+              <label for="secondChoice2">Inserisci la seconda sezione (C2b) interattiva</label> <!-- scelta 2 seconda parte-->
+              <input
+                type="text"
+                formControlName="secondChoice2"
+                class="form-control"
+                placeholder="Write the choice interactive..."
+                id="secondChoice2"
+              />
               <!-- <p *ngIf="isTouchedInvalid('story.secondChoice.secondChoice2')">
                 Inserisci correttamente la parte interattiva
               </p> -->
 
-              <label for="secondChoice3">Inserisci la seconda sezione (C2c) interattiva</label> <!--scelta 3 seconda parte-->
-              <input type="text" formControlName="secondChoice3" class="form-control"
-                placeholder="Write the choice interactive..." id="secondChoice3" />
+              <label for="secondChoice3"
+                >Inserisci la seconda sezione (C2c) interattiva</label
+              >
+              <!--scelta 3 seconda parte-->
+              <input
+                type="text"
+                formControlName="secondChoice3"
+                class="form-control"
+                placeholder="Write the choice interactive..."
+                id="secondChoice3"
+              />
               <!-- <p *ngIf="isTouchedInvalid('story.secondChoice.secondChoice3')">
                 Inserisci correttamente la parte interattiva
               </p> -->
 
-              <label for="secondChoice4">Inserisci la seconda sezione (C2d) interattiva</label> <!--scelta 4 seconda parte-->
-              <input type="text" formControlName="secondChoice4" class="form-control"
-                placeholder="Write the choice interactive..." id="secondChoice4" />
+              <label for="secondChoice4"
+                >Inserisci la seconda sezione (C2d) interattiva</label
+              >
+              <!--scelta 4 seconda parte-->
+              <input
+                type="text"
+                formControlName="secondChoice4"
+                class="form-control"
+                placeholder="Write the choice interactive..."
+                id="secondChoice4"
+              />
               <!-- <p *ngIf="isTouchedInvalid('story.secondChoice.secondChoice4')"> -->
-                Inserisci correttamente la parte interattiva
+              Inserisci correttamente la parte interattiva
               <!-- </p> -->
-
             </div>
 
             <div formGroupName="part3">
-              <label for="part3a">Inserisci la terza sezione (3A) interattiva</label>
-              <input type="text" formControlName="part3a" class="form-control"
-                placeholder="Write the section interactive..." id="part3a" />
+              <label for="part3a"
+                >Inserisci la terza sezione (3A) interattiva</label
+              >
+              <input
+                type="text"
+                formControlName="part3a"
+                class="form-control"
+                placeholder="Write the section interactive..."
+                id="part3a"
+              />
               <p *ngIf="isTouchedInvalid('story.part3.part3a')">
                 Inserisci correttamente la parte interattiva
               </p>
-              <label for="part3b">Inserisci la terza sezione (3B) interattiva</label>
-              <input type="text" formControlName="part3b" class="form-control"
-                placeholder="Write the section interactive..." id="part3b" />
+              <label for="part3b"
+                >Inserisci la terza sezione (3B) interattiva</label
+              >
+              <input
+                type="text"
+                formControlName="part3b"
+                class="form-control"
+                placeholder="Write the section interactive..."
+                id="part3b"
+              />
               <p *ngIf="isTouchedInvalid('story.part3.part3b')">
                 Inserisci correttamente la parte interattiva
               </p>
-              <label for="part3c">Inserisci la terza sezione (3C) interattiva</label>
-              <input type="text" formControlName="part3c" class="form-control"
-                placeholder="Write the section interactive..." id="part3c" />
+              <label for="part3c"
+                >Inserisci la terza sezione (3C) interattiva</label
+              >
+              <input
+                type="text"
+                formControlName="part3c"
+                class="form-control"
+                placeholder="Write the section interactive..."
+                id="part3c"
+              />
               <p *ngIf="isTouchedInvalid('story.part3.part3c')">
                 Inserisci correttamente la parte interattiva
               </p>
-              <label for="part3d">Inserisci la terza sezione (3D) interattiva</label>
-              <input type="text" formControlName="part3d" class="form-control"
-                placeholder="Write the section interactive..." id="part3d" />
+              <label for="part3d"
+                >Inserisci la terza sezione (3D) interattiva</label
+              >
+              <input
+                type="text"
+                formControlName="part3d"
+                class="form-control"
+                placeholder="Write the section interactive..."
+                id="part3d"
+              />
               <p *ngIf="isTouchedInvalid('story.part3.part3d')">
                 Inserisci correttamente la parte interattiva
               </p>
             </div>
           </div>
 
-          <button (click)="addLightNovel()" class="btn btn-primary">
+          <button
+            *ngIf="!novel"
+            (click)="addLightNovel()"
+            class="btn btn-primary"
+          >
             Crea
+          </button>
+          <button
+            *ngIf="novel"
+            (click)="updateLightNovel()"
+            class="btn btn-primary"
+          >
+            Modifica
           </button>
           <button (click)="cleanForum()" class="btn btn-primary">Svuota</button>
         </form>
