--- a/angular/src/app/shared-components/light-novel-form/light-novel-form.component.html
+++ b/angular/src/app/shared-components/light-novel-form/light-novel-form.component.html
@@ -262,18 +262,10 @@
             </div>
           </div>
 
-          <button
-            *ngIf="!novel"
-            (click)="addLightNovel()"
-            class="btn btn-primary"
-          >
+          <button (click)="addLightNovel()" class="btn btn-primary">
             Crea
           </button>
-          <button
-            *ngIf="novel"
-            (click)="updateLightNovel()"
-            class="btn btn-primary"
-          >
+          <button (click)="updateLightNovel()" class="btn btn-primary">
             Modifica
           </button>
           <button (click)="cleanForum()" class="btn btn-primary">Svuota</button>
