--- a/angular/src/app/shared-components/light-novel-form/light-novel-form.component.html
+++ b/angular/src/app/shared-components/light-novel-form/light-novel-form.component.html
@@ -114,33 +114,33 @@
             </div>
 
             <div formGroupName="part2">
-              <label for="part2a"
+              <label for="part2A"
                 >Inserisci la seconda sezione (2A) interattiva</label
               >
               <!-- storia 2a-->
               <input
                 type="text"
-                formControlName="part2a"
+                formControlName="part2A"
                 class="form-control"
                 placeholder="Write the section interactive..."
-                id="part2a"
+                id="part2A"
               />
-              <p *ngIf="isTouchedInvalid('story.part2.part2a')">
+              <p *ngIf="isTouchedInvalid('story.part2.part2A')">
                 Inserisci correttamente la parte interattiva
               </p>
 
-              <label for="part2b"
+              <label for="part2B"
                 >Inserisci la seconda sezione (2B) interattiva</label
               >
               <!-- storia 2b-->
               <input
                 type="text"
-                formControlName="part2b"
+                formControlName="part2B"
                 class="form-control"
                 placeholder="Write the section interactive..."
-                id="part2b"
+                id="part2B"
               />
-              <p *ngIf="isTouchedInvalid('story.part2.part2b')">
+              <p *ngIf="isTouchedInvalid('story.part2.part2B')">
                 Inserisci correttamente la parte interattiva
               </p>
             </div>
@@ -148,115 +148,118 @@
             <div formGroupName="secondChoice">
               <!-- scelste seconda parte-->
 
-              <label for="secondChoice1"
+              <label for="choice1"
                 >Inserisci la seconda sezione (C2a) interattiva</label
               >
               <!--scelta 1 seconda parte-->
               <input
                 type="text"
-                formControlName="secondChoice1"
+                formControlName="choice1"
                 class="form-control"
                 placeholder="Write the choice interactive..."
-                id="secondChoice1"
+                id="choice1"
               />
-              <!-- <p *ngIf="isTouchedInvalid('story.secondChoice.secondChoice1')">
-                Inserisci correttamente la parte interattiva
-              </p>
-
-              <label for="secondChoice2">Inserisci la seconda sezione (C2b) interattiva</label> <!-- scelta 2 seconda parte-->
-              <input
-                type="text"
-                formControlName="secondChoice2"
-                class="form-control"
-                placeholder="Write the choice interactive..."
-                id="secondChoice2"
-              />
-              <!-- <p *ngIf="isTouchedInvalid('story.secondChoice.secondChoice2')">
+              <!-- <p *ngIf="isTouchedInvalid('story.secondChoice.choice1')">
                 Inserisci correttamente la parte interattiva
               </p> -->
 
-              <label for="secondChoice3"
+              <label for="choice2"
+                >Inserisci la seconda sezione (C2b) interattiva</label
+              >
+              <!-- scelta 2 seconda parte-->
+              <input
+                type="text"
+                formControlName="choice2"
+                class="form-control"
+                placeholder="Write the choice interactive..."
+                id="choice2"
+              />
+              <!-- <p *ngIf="isTouchedInvalid('story.secondChoice.choice2')">
+                Inserisci correttamente la parte interattiva
+              </p> -->
+
+              <label for="choice3"
                 >Inserisci la seconda sezione (C2c) interattiva</label
               >
               <!--scelta 3 seconda parte-->
               <input
                 type="text"
-                formControlName="secondChoice3"
+                formControlName="choice3"
                 class="form-control"
                 placeholder="Write the choice interactive..."
-                id="secondChoice3"
+                id="choice3"
               />
-              <!-- <p *ngIf="isTouchedInvalid('story.secondChoice.secondChoice3')">
+              <!-- <p *ngIf="isTouchedInvalid('story.secondChoice.choice3')">
                 Inserisci correttamente la parte interattiva
               </p> -->
 
-              <label for="secondChoice4"
+              <label for="choice4"
                 >Inserisci la seconda sezione (C2d) interattiva</label
               >
               <!--scelta 4 seconda parte-->
               <input
                 type="text"
-                formControlName="secondChoice4"
+                formControlName="choice4"
                 class="form-control"
                 placeholder="Write the choice interactive..."
-                id="secondChoice4"
+                id="choice4"
               />
-              <!-- <p *ngIf="isTouchedInvalid('story.secondChoice.secondChoice4')"> -->
+              <!-- <p *ngIf="isTouchedInvalid('story.secondChoice.choice4')"> -->
               Inserisci correttamente la parte interattiva
               <!-- </p> -->
             </div>
 
             <div formGroupName="part3">
-              <label for="part3a"
+              <label for="part3A"
                 >Inserisci la terza sezione (3A) interattiva</label
               >
               <input
                 type="text"
-                formControlName="part3a"
+                formControlName="part3A"
                 class="form-control"
                 placeholder="Write the section interactive..."
-                id="part3a"
+                id="part3A"
               />
-              <p *ngIf="isTouchedInvalid('story.part3.part3a')">
+              <p *ngIf="isTouchedInvalid('story.part3.part3A')">
                 Inserisci correttamente la parte interattiva
               </p>
-              <label for="part3b"
+              <label for="part3B"
                 >Inserisci la terza sezione (3B) interattiva</label
               >
               <input
                 type="text"
-                formControlName="part3b"
+                formControlName="part3B"
                 class="form-control"
                 placeholder="Write the section interactive..."
-                id="part3b"
+                id="part3B"
               />
-              <p *ngIf="isTouchedInvalid('story.part3.part3b')">
+              <p *ngIf="isTouchedInvalid('story.part3.part3B')">
                 Inserisci correttamente la parte interattiva
               </p>
-              <label for="part3c"
+              <label for="part3C"
                 >Inserisci la terza sezione (3C) interattiva</label
               >
               <input
                 type="text"
-                formControlName="part3c"
+                formControlName="part3C"
                 class="form-control"
                 placeholder="Write the section interactive..."
-                id="part3c"
+                id="part3C"
               />
-              <p *ngIf="isTouchedInvalid('story.part3.part3c')">
+              <p *ngIf="isTouchedInvalid('story.part3.part3C')">
                 Inserisci correttamente la parte interattiva
               </p>
-              <label for="part3d"
+              <label for="part3D"
                 >Inserisci la terza sezione (3D) interattiva</label
               >
               <input
                 type="text"
-                formControlName="part3d"
+                formControlName="part3D"
                 class="form-control"
                 placeholder="Write the section interactive..."
-                id="part3d"
+                id="part3D"
               />
-              <p *ngIf="isTouchedInvalid('story.part3.part3d')">
+              <p *ngIf="isTouchedInvalid('story.part3.part3D')">
                 Inserisci correttamente la parte interattiva
               </p>
             </div>
