--- a/angular/src/app/shared-components/light-novel-form/light-novel-form.component.html
+++ b/angular/src/app/shared-components/light-novel-form/light-novel-form.component.html
@@ -266,10 +266,18 @@
             </div>
           </div>
 
-          <button (click)="addLightNovel()" class="btn btn-primary">
+          <button
+            *ngIf="!novel"
+            (click)="addLightNovel()"
+            class="btn btn-primary"
+          >
             Crea
           </button>
-          <button (click)="updateLightNovel()" class="btn btn-primary">
+          <button
+            *ngIf="novel"
+            (click)="updateLightNovel()"
+            class="btn btn-primary"
+          >
             Modifica
           </button>
           <button (click)="cleanForum()" class="btn btn-primary">Svuota</button>
