--- a/angular/src/app/pages/profile/favourites/favourites.component.html
+++ b/angular/src/app/pages/profile/favourites/favourites.component.html
@@ -1,16 +1,15 @@
-<div class="container" *ngIf="user">
+<div class="container-fluid imgBG" *ngIf="user">
   <div class="row">
-    <div class="col">
-      <h3>Ciao {{ user.name }},</h3>
-      <h5>Qui la lista dei tuoi preferiti</h5>
+    <div class="col text-light mt-4 text-center">
+      <h3 class="mb-2 fst-italic">Ciao {{ user.name }}!</h3>
     </div>
   </div>
-  <div class="row">
-    <div class="col-12">
-      <h5>Qui ci sono tutti i tuoi film preferiti:</h5>
+  <div class="row text-light mt-4">
+    <div class="col-12 fst-italic">
+      <h5>Qui ci sono tutte le tue lightNovel preferiti:</h5>
     </div>
     <div
-      class="col-12 col-sm-6 col-lg-3 col-xl-4"
+      class="col-12 col-sm-6 col-lg-4 col-xl-3"
       *ngFor="let lightNovel of favouriteLightNovelArray"
     >
       <app-card-home [lightNovelCard]="lightNovel"></app-card-home>
