--- a/angular/src/app/shared-components/card-home/card-home.component.scss
+++ b/angular/src/app/shared-components/card-home/card-home.component.scss
@@ -3,13 +3,18 @@ a {
 }
 .card {
   border: none;
-
+  backdrop-filter: blur(16px);
+    background-color: rgba(255, 255, 255, 0.7);
   img {
     height: 150px;
     width: 150px;
     border-radius: 50%;
+    margin: 1em;
+    z-index: 1;
   }
-
+  h5 {
+    color: #addad1;
+  }
   span {
     border-radius: 20%;
     padding-inline: 0.5rem;
