--- a/angular/src/app/pages/profile/my-light-novel/my-light-novel.component.html
+++ b/angular/src/app/pages/profile/my-light-novel/my-light-novel.component.html
@@ -1,37 +1,27 @@
-<div class="container">
-  <div class="row">
-    <div *ngFor="let novel of novels" class="col">
-      <div class="card d-flex align-items-center my-3 flex-row overflow-hidden">
-        <a routerLink="/lightNovelDetails/{{ novel.id }}">
-          <img
-            [src]="'../../../assets/img/lightNovelImg/' + novel.slug + '.png'"
-            class="card-img-left"
-            alt="{{ novel.title }}"
-            id="img"
-          />
-        </a>
-        <div
-          class="card-body d-flex flex-column align-items-start justify-content-center ms-3"
-        >
-          <div class="d-flex align-items-center">
-            <a routerLink="/lightNovelDetails/{{ novel.id }}">
-              <h5 class="card-title">{{ novel.title }}</h5>
-            </a>
-            <i
-              class="ms-2 bi"
-              [ngClass]="isFavourite ? 'bi-heart-fill text-danger' : 'bi-heart'"
-              (click)="toggleFavourite($event)"
-            ></i>
-          </div>
-          <div>
-            <small class="card-text">{{ novel.created_at }}</small>
-            <p class="card-text">{{ novel.description }}</p>
-            <button
-              (click)="redirectCreate(novel)"
-              class="btn btn-primary mt-4"
-            >
-              Modifica
-            </button>
+<div id="immagine">
+  <div class="container">
+    <div class="row">
+      <div *ngFor="let novel of novels" class="col">
+        <div class="card d-flex align-items-center my-3 flex-row overflow-hidden card">
+          <a routerLink="/lightNovelDetails/{{ novel.id }}">
+            <img [src]="'../../../assets/img/lightNovelImg/' + novel.slug + '.png'" class="card-img-left"
+              alt="{{ novel.title }}" id="img" />
+          </a>
+          <div class="card-body d-flex flex-column align-items-start justify-content-center ms-3">
+            <div class="d-flex align-items-center text-white">
+              <a id="no_line" routerLink="/lightNovelDetails/{{ novel.id }}">
+                <h5 class="card-title text-white ">{{ novel.title }}</h5>
+              </a>
+              <i class="ms-2 bi" [ngClass]="isFavourite ? 'bi-heart-fill text-danger' : 'bi-heart'"
+                (click)="toggleFavourite($event)"></i>
+            </div>
+            <div>
+              <small class="card-text text-white">{{ novel.created_at }}</small>
+              <p class="card-text text-white">{{ novel.description }}</p>
+              <p class="text-end" (click)="redirectCreate(novel)">
+                <i class="bi bi-pencil text-white"></i>
+              </p>
+            </div>
           </div>
         </div>
       </div>
