--- a/angular/src/app/shared-components/user-card/user-card.component.html
+++ b/angular/src/app/shared-components/user-card/user-card.component.html
@@ -1,83 +1,80 @@
-<div class="container mt-4">
-  <table class="table table-bordered table-hover shadow-sm">
-    <thead class="thead-light">
-      <tr>
-        <th scope="col">Info</th>
-        <th scope="col">Actions</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr
-        *ngFor="
-          let user of users | paginate : { itemsPerPage: 5, currentPage: p }
-        "
-      >
-        <td>
-          <div class="row g-0">
-            <div
-              class="col-md-4 align-items-center d-flex justify-content-center"
-            >
-              <img
-                [src]="user.userImage"
-                alt="icon"
-                class="rounded-circle"
-                style="width: 100px; height: auto"
-              />
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">{{ user.name }} {{ user.surname }}</h5>
-                <p class="card-text">
-                  <strong>Gender:</strong> {{ user.gender }}
-                </p>
-                <p class="card-text">
-                  <strong>Username:</strong> {{ user.username }}
-                </p>
-                <p class="card-text">
-                  <strong>Email:</strong> {{ user.email }}
-                </p>
-              </div>
-            </div>
-          </div>
-        </td>
-        <td>
+<table class="table table-bordered table-hover shadow-lg">
+  <thead class="thead-light">
+    <tr>
+      <th scope="col">Info</th>
+      <th scope="col">Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr
+      *ngFor="
+        let user of users | paginate : { itemsPerPage: 5, currentPage: p }
+      "
+    >
+      <td>
+        <div class="row g-0">
           <div
-            class="text-center d-flex justify-content-center align-items-center"
+            class="col-md-4 align-items-center d-flex justify-content-center"
           >
-            <button
-              class="btn btn-danger mx-1"
-              (click)="openDeleteModal(user, deleteModal)"
-              ngbTooltip="Delete User"
-              placement="top"
-            >
-              <i class="bi bi-trash"></i>
-            </button>
-            <button
-              class="btn btn-success mx-1"
-              *ngIf="user.role === 'auth'"
-              (click)="upgradeUser(user.id)"
-              ngbTooltip="Upgrade User"
-              placement="top"
-            >
-              <i class="bi bi-arrow-up"></i>
-            </button>
-            <button
-              class="btn btn-warning mx-1"
-              *ngIf="user.role === 'sub-admin'"
-              (click)="downgradeUser(user.id)"
-              ngbTooltip="Downgrade User"
-              placement="top"
-            >
-              <i class="bi bi-arrow-down"></i>
-            </button>
+            <img
+              [src]="user.userImage"
+              alt="icon"
+              class="rounded-circle"
+              style="width: 100px; height: auto"
+            />
           </div>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-  <div class="d-flex justify-content-center border-3">
-    <pagination-controls (pageChange)="p = $event"></pagination-controls>
-  </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">{{ user.name }} {{ user.surname }}</h5>
+              <p class="card-text">
+                <strong>Gender:</strong> {{ user.gender }}
+              </p>
+              <p class="card-text">
+                <strong>Username:</strong> {{ user.username }}
+              </p>
+              <p class="card-text"><strong>Email:</strong> {{ user.email }}</p>
+            </div>
+          </div>
+        </div>
+      </td>
+      <td
+        class="d-flex justify-content-center align-items-center flex-grow-1 w-100"
+      >
+        <button
+          class="btn btn-danger mx-1"
+          (click)="openDeleteModal(user, deleteModal)"
+          ngbTooltip="Delete User"
+          placement="top"
+        >
+          <i class="bi bi-trash"></i>
+        </button>
+        <button
+          class="btn btn-success mx-1"
+          *ngIf="user.role === 'auth'"
+          (click)="upgradeUser(user.id)"
+          ngbTooltip="Upgrade User"
+          placement="top"
+        >
+          <i class="bi bi-arrow-up"></i>
+        </button>
+        <button
+          class="btn btn-warning mx-1"
+          *ngIf="user.role === 'sub-admin'"
+          (click)="downgradeUser(user.id)"
+          ngbTooltip="Downgrade User"
+          placement="top"
+        >
+          <i class="bi bi-arrow-down"></i>
+        </button>
+      </td>
+    </tr>
+  </tbody>
+</table>
+<div class="d-flex justify-content-center border-3">
+  <pagination-controls
+    (pageChange)="p = $event"
+    class="my-pagination"
+  ></pagination-controls>
 </div>
 
 <ng-template #deleteModal let-modal>
