--- a/angular/src/app/pages/profile/profile.component.html
+++ b/angular/src/app/pages/profile/profile.component.html
@@ -1,17 +1,17 @@
-<div class="card my-3">
+<div class="card my-3 vh-100" id="img_profile">
   <div class="row g-0">
-    <div class="col-md-4">
-      <img *ngIf="!user.userImage" src="https://as1.ftcdn.net/v2/jpg/02/71/59/92/1000_F_271599217_f9pIx8B1GiJZunOokVAeP2BF1BiXM2Ms.jpg" class="img-fluid rounded-start" alt="...">
-      <img *ngIf="user.userImage" [src]="user.userImage" class="img-fluid rounded-start" alt="...">
+    <div class="col-md-4 d-flex justify-content-center align-items-center">
+      <img *ngIf="!user.userImage" src="https://as1.ftcdn.net/v2/jpg/02/71/59/92/1000_F_271599217_f9pIx8B1GiJZunOokVAeP2BF1BiXM2Ms.jpg" class="img-fluid rounded-start img_avatar" alt="...">
+      <img *ngIf="user.userImage" [src]="user.userImage" class="img-fluid w-50 rounded-circle img_avatar " alt="...">
     </div>
     <div class="col-md-8">
-      <div class="card-body my-5">
+      <div class="card-body my-5 text-white">
         <h5 class="card-title">Email: {{user.email}}</h5>
         <p class="card-text">Nome: {{user.name}}</p>
         <p class="card-text">Cognome: {{user.surname}}</p>
-        <p class="card-text">{{user.gender}}</p>
-        <p class="card-text">{{user.biography}}</p>
-        <p class="card-text">{{user.username}}</p>
+        <p class="card-text">Username: {{user.username}}</p>
+        <p class="card-text">Gender: {{user.gender}}</p>
+        <p class="card-text">Parlo un po' di me: {{user.biography}}</p>
       </div>
     </div>
   </div>
