--- a/angular/src/app/pages/profile/profile.component.scss
+++ b/angular/src/app/pages/profile/profile.component.scss
@@ -1,3 +1,10 @@
 .container {
   min-height: 80vh;
 }
+
+#img_profile {
+  background-image: url(../../../assets/img/pages/profile.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+
+}
