modifiche su home (prova) modifiche sulle card e favorite

--- a/angular/src/app/pages/home/home.component.html
+++ b/angular/src/app/pages/home/home.component.html
@@ -1,7 +1,9 @@
 <div
   class="container-fluid"
   [ngStyle]="{
-    backgroundImage: 'url()'
+    backgroundImage: 'url(../../../assets/img/pages/home.webp)',
+    backgroundRepeat: 'no-repeat',
+    backgroundSize: 'cover',
   }"
 >
   <div class="row">
