--- a/angular/src/app/pages/profile/create-light-novel/create-light-novel.component.html
+++ b/angular/src/app/pages/profile/create-light-novel/create-light-novel.component.html
@@ -1,1 +1,3 @@
-<app-light-novel-form [novel]="novel"></app-light-novel-form>
+<div class="imgBG">
+  <app-light-novel-form [novel]="novel"></app-light-novel-form>
+</div>
