--- a/angular/src/app/shared-components/light-novel-form/light-novel-form.component.html
+++ b/angular/src/app/shared-components/light-novel-form/light-novel-form.component.html
@@ -10,7 +10,7 @@
             type="text"
             formControlName="title"
             class="form-control"
-            placeholder="Write your title..."
+            placeholder="Write your title... "
             name="title"
             id="title"
           />
@@ -81,7 +81,9 @@
 
           <div formGroupName="story">
             <!-- racconto storia iniziale-->
-            <label for="part1">Inserisci la prima sezione interattiva</label>
+            <label for="part1"
+              >Inserisci la prima parte della sezione interattiva</label
+            >
             <input
               type="text"
               formControlName="part1"
@@ -96,7 +98,7 @@
 
             <div formGroupName="firstChoice">
               <label for="firstChoice1"
-                >Inserisci la seconda sezione (C1) interattiva</label
+                >Inserisci la scelta n°1 interattiva</label
               >
               <!--scelta 1 prima parte-->
               <input
@@ -111,7 +113,7 @@
               </p>
 
               <label for="firstChoice2"
-                >Inserisci la seconda sezione (C2) interattiva</label
+                >Inserisci la scelta n°2 interattiva</label
               >
               <!--scelta 2 prima parte-->
               <input
@@ -128,7 +130,8 @@
 
             <div formGroupName="part2">
               <label for="part2A"
-                >Inserisci la seconda sezione (2A) interattiva</label
+                >Inserisci la seconda parte interattiva (che è influenzata dalla
+                scelta n°1)</label
               >
               <!-- storia 2a-->
               <input
@@ -143,7 +146,8 @@
               </p>
 
               <label for="part2B"
-                >Inserisci la seconda sezione (2B) interattiva</label
+                >Inserisci la seconda parte interattiva (che è influenzata dalla
+                scelta n°2)</label
               >
               <!-- storia 2b-->
               <input
@@ -162,7 +166,7 @@
               <!-- scelste seconda parte-->
 
               <label for="choice1"
-                >Inserisci la seconda sezione (C2a) interattiva</label
+                >Inserisci la seoncda scelta interattiva</label
               >
               <!--scelta 1 seconda parte-->
               <input
