--- a/angular/src/app/pages/profile/favourites/favourites.component.html
+++ b/angular/src/app/pages/profile/favourites/favourites.component.html
@@ -8,10 +8,7 @@
     <div class="col-12 fst-italic">
       <h5>Qui ci sono tutte le tue lightNovel preferiti:</h5>
     </div>
-    <div
-      class="col-12 col-sm-6 col-lg-4 col-xl-3"
-      *ngFor="let lightNovel of favouriteLightNovelArray"
-    >
+    <div class="col" *ngFor="let lightNovel of favouriteLightNovelArray">
       <app-card-home [lightNovelCard]="lightNovel"></app-card-home>
     </div>
   </div>
