--- a/angular/src/app/shared-components/light-novel-form/light-novel-form.component.scss
+++ b/angular/src/app/shared-components/light-novel-form/light-novel-form.component.scss
@@ -1,11 +1,16 @@
 .container {
   min-height: 80vh;
-
+  backdrop-filter: blur(100px);
+  background-color: rgba(255, 255, 255, 0);
+  color: white;
   input.ng-invalid.ng-touched {
     border-color: red;
   }
   textarea.ng-invalid.ng-touched {
     border-color: red;
+  }
+  p {
+    margin: 0 0.3em;
   }
 }
 
