refactor: Update carousel styling and configuration in home.component.scss and home.component.ts

--- a/angular/src/app/pages/home/home.component.scss
+++ b/angular/src/app/pages/home/home.component.scss
@@ -16,4 +16,18 @@
     background-color: red;
     color: white;
   }
+
+  .imgCarousel {
+    width: 100%;
+  }
+
+  .carousel-caption {
+    p {
+      display: -webkit-box;
+      -webkit-line-clamp: 1;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+  }
 }
